fixed layout problem (Opera (Mac OS X); IE7 (WinXP))    The text in the right hand column was being written in the main panel when the width of the browser window was small
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@6949 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -284,6 +284,7 @@ a:active {
 
 .maincontent {
 	left:242px;
+	min-width: 570px;
 	z-index:4;
 	background-color: #FFFFFF;
 	vertical-align: top;
